--- a/src/Components/Features/style.scss
+++ b/src/Components/Features/style.scss
@@ -17,6 +17,7 @@
     border: unset;
     border-radius: 10px;
     margin-top: 15px;
+    cursor: pointer;
     &:hover {
       background-color: #be8126;
     }
@@ -35,6 +36,7 @@
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: -1;
   }
   .left-side {
     flex: 1;
