--- a/src/Components/Features/style.scss
+++ b/src/Components/Features/style.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   padding: 5% 10%;
   box-sizing: border-box;
+  transition: all 0.2s ease;
   .btn {
     width: 180px;
     height: 50px;
@@ -29,7 +30,6 @@
     padding-bottom: 30px;
   }
   .background-overlay {
-    background: red;
     opacity: 0.1;
     position: absolute;
     top: 0;
