--- a/src/Components/Panel/style.scss
+++ b/src/Components/Panel/style.scss
@@ -9,6 +9,33 @@
     display: flex;
     flex-flow: column wrap;
     transition: all 0.2s ease;
+    border-right: 1px solid rgba(0,0,0,0.2);
+    button{
+        border:none;
+        outline: none;
+        min-height: 35px;
+        width: 80%;
+        margin-left: 10%;
+        border-radius: 6px;
+        background-color: #0099ff;
+        color: white;
+        font-weight: bold;
+        cursor: pointer;
+    }
+    input {
+        width: 80%;
+        margin-left: 10%;
+        margin-bottom: 10px;
+        height: 30px;
+        border-radius: 6px;  
+    }
+    select{
+        width: 80%;
+        margin-left: 10%;
+        margin-bottom: 10px;
+        height: 30px;
+        border-radius: 6px;
+    }
     &__header{
         width: 100%;
         height: 40px;
@@ -44,7 +71,7 @@
 
 .open-panel-btn{
     position: fixed;
-    top: 10px;
+    top: 47%;
     left: 10px;
     width: 30px;
     height: 30px;
@@ -59,11 +86,14 @@
     justify-content: center;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
     transition: all 0.2s ease;
+    opacity: 0.8;
     &:hover{
         box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.4);
+        opacity: 1;
     }
     cursor: pointer;
     img{
         width: 100%;
+        margin-left: 2px;
     }
 }
