--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 html,
 body {
   padding: 0px;
   margin: 0px;
+  font-family: "Roboto", sans-serif;
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .save-btn {
@@ -27,28 +30,32 @@ body {
   }
 }
 
-.parent-container{
+.parent-container {
   min-height: 100vh;
   padding-bottom: 50vh;
-  .menu {
-    z-index: 200;
-    position: absolute;
+  width: 100%;
+}
+
+.menu {
+  z-index: 200;
+  position: absolute;
+  display: flex;
+  flex-flow: column wrap;
+  background-color: white;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+  width: 200px;
+  border-radius: 6px;
+  overflow: hidden;
+  .item {
+    height: 35px;
+    font-size: 13px;
     display: flex;
-    flex-flow: column wrap;
-    background-color: white;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
-    width: 200px;
-    border-radius: 6px;
-    .item{
-      height: 40px;
-      font-size: 15px;
-      display: flex;
-      align-items: center;
-      padding-left: 10px;
-      cursor: pointer;
-      &:hover{
-        background-color: rgba(0,0,0,0.1);
-      }
+    align-items: center;
+    padding-left: 10px;
+    cursor: pointer;
+    &:hover {
+      background-color: #EE1D51;
+      color: white;
     }
   }
 }
